--- a/packages/rspack/package.json
+++ b/packages/rspack/package.json
@@ -72,6 +72,7 @@
   "dependencies": {
     "@module-federation/runtime-tools": "0.5.1",
     "@rspack/binding": "workspace:*",
+    "@rspack/tracing": "workspace:*",
     "@rspack/lite-tapable": "1.0.1",
     "caniuse-lite": "^1.0.30001616"
   },
