--- a/packages/rspack-cli/package.json
+++ b/packages/rspack-cli/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@discoveryjs/json-ext": "^0.5.7",
     "@rspack/dev-server": "1.0.5",
+    "@rspack/tracing": "workspace:*",
     "colorette": "2.0.19",
     "exit-hook": "^3.2.0",
     "interpret": "^3.1.1",
