--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,7 +68,7 @@ ustr               = { package = "ustr-fxhash", version = "1.0.0" }
 xxhash-rust        = { version = "0.8.10" }
 
 # Pinned
-napi        = { package = "napi-h", version = "=2.16.1" }
+napi        = { package = "napi-h", version = "=2.16.1", features = ["anyhow"] }
 napi-build  = { version = "2" }
 napi-derive = { version = "2" }
 
