--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,7 @@ swc_error_reporters = { version = "=3.0.0" }
 swc_html            = { version = "=3.0.0" }
 swc_html_minifier   = { version = "=3.0.0", default-features = false }
 swc_node_comments   = { version = "=2.0.0" }
+swc_typescript      = { version = "=2.0.0" }
 
 rspack_dojang = { version = "0.1.9" }
 [workspace.metadata.release]
