--- a/crates/rspack_loader_swc/Cargo.toml
+++ b/crates/rspack_loader_swc/Cargo.toml
@@ -29,6 +29,7 @@ rspack_error             = { version = "0.1.0", path = "../rspack_error" }
 rspack_hook              = { version = "0.1.0", path = "../rspack_hook" }
 rspack_loader_runner     = { version = "0.1.0", path = "../rspack_loader_runner" }
 rspack_paths             = { version = "0.1.0", path = "../rspack_paths" }
+rspack_plugin_emit_dts   = { version = "0.1.0", path = "../rspack_plugin_emit_dts" }
 rspack_plugin_javascript = { version = "0.1.0", path = "../rspack_plugin_javascript" }
 rspack_util              = { version = "0.1.0", path = "../rspack_util" }
 rustc-hash               = { workspace = true }
@@ -40,5 +41,4 @@ swc_core                 = { workspace = true, features = ["base", "ecma_ast", "
 swc_plugin_import        = { version = "0.1.5", path = "../swc_plugin_import" }
 swc_typescript           = { workspace = true }
 tokio                    = { workspace = true }
-tracing                  = { workspace = true }
 url                      = "2.5.0"
